# NxpilotAi

./: README.md
NX_MCP/: CLAUDE.md  README.md  main.py  pyproject.toml
NX_MCP/examples/: assembly_demo.py  create_block.py
NX_MCP/src/nx_mcp/: __init__.py  nx_session.py  response.py  server.py
NX_MCP/src/nx_mcp/journal/: __init__.py
NX_MCP/src/nx_mcp/tools/: assembly.py  drawing.py  feature_tree.py  file_ops.py  measure.py  modeling.py  sketch.py  utility.py
NX_MCP/src/nx_mcp/utils/: geometry.py
NX_MCP/src/nxpilot_ai/: nx_session.py  server.py
NX_MCP/src/nxpilot_ai/tools/: __init__.py  assembly.py  batch_processing.py  drawing.py  feature_tree.py  file_ops.py  geometry_search.py  intelligent_modeling.py  manufacturing_assistant.py  measure.py  modeling.py  registry.py  sketch.py  utility.py  workflows.py
NX_MCP/src/nxpilot_ai/utils/: __init__.py  selection.py
NX_MCP/tests/: conftest.py  test_nx_session.py  test_registry.py  test_response.py  test_server.py
NX_MCP/tests/test_tools/: test_assembly.py  test_drawing.py  test_feature_tree.py  test_file_ops.py  test_measure.py  test_modeling.py  test_sketch.py  test_utility.py
frontend/app/dashboard/: page.tsx
